* Revise Task, Bug, Risk, Problem, Milestone read views
* [Mobile] Make the back button associates to native back action to improve the navigation performance
* [Mobile] Support thumbnail for attachment
* [Mobile] User can preview attachment easily
* [Mobile] Support display hyperlinks for assignee, task, task group, milestone etc
* [Mobile] Revise time logging component

**Bug Fixes**

* Fix timezone issue for datefield component
* Can not get the log date for time logging in several rare browsers
* [Mobile] Back button does not work properly
* [Mobile] View title is not aligned center in iOS
* [Mobile] Can only upload one file in iOS

Version 4.5.3
-----------------------------

**Library Upgrades**

* Upgrade AspectJ library to 1.8.3

**Improvements**

* The new MyCollab mobile is released! This is the alpha release, use it at your own risk.
* All description supports rich text
* Clean html in rich text to help html display html string correctly
* Display the crm activity stream properly when there is several items user can not access
* Display attachments in thumbnail mode
* Allow users can search in their following ticket list

**Bug Fixes**

* Custom layout throws NPE
* Fix NPE when user navigate the project time tracking list
* Throws error if user save the empty page content
* Minor fixes in set the overdue title colors in project and crm items
* Error when user upload the invalid file name

Version 4.5.2
-----------------------------

**Library Upgrades**

* Upgrade Spring framework to 4.1.1.RELEASE
* Upgrade Vaadin to 7.3.3
* Upgrade Camel to 2.14.0

**New Features**

* Make the new MyCollab installer for every platform: Windows, MacOS, Linux
* Install MyCollab as window service
* The new notification to remind user upload his avatar if he did not

**Improvements**

* Remove unused libraries for the community edition such as Dropbox, Solr to reduce the size of installer
* Tweak the error handling while init view
* Refactor the file module management