@@ -19,6 +19,7 @@ package com.esofthead.mycollab.schedule.email.project.impl;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import com.esofthead.mycollab.common.NotificationType;
@@ -97,7 +98,7 @@ public abstract class SendMailToAllMembersAction<B> implements
 	public void sendNotificationForCreateAction(
 			SimpleRelayEmailNotification notification) {
 		List<SimpleUser> notifiers = getNotifyUsers((ProjectRelayEmailNotification) notification);
-		if ((notifiers != null) && !notifiers.isEmpty()) {
+		if (CollectionUtils.isNotEmpty(notifiers)) {
 			onInitAction(notification);
 			for (SimpleUser user : notifiers) {
 				MailContext<B> context = new MailContext<B>(notification, user,
@@ -129,8 +130,12 @@ public abstract class SendMailToAllMembersAction<B> implements
 									null,
 									contentGenerator
 											.generateSubjectContent(getCreateSubject(context)),
-									contentGenerator.generateBodyContent(context
-											.templatePath("templates/email/project/itemCreatedNotifier.mt")),
+									contentGenerator
+											.generateBodyContent(
+													"templates/email/project/itemCreatedNotifier.mt",
+													context.getLocale(),
+													SiteConfiguration
+															.getDefaultLocale()),
 									null);
 				}
 			}
@@ -141,7 +146,7 @@ public abstract class SendMailToAllMembersAction<B> implements
 	public void sendNotificationForUpdateAction(
 			SimpleRelayEmailNotification notification) {
 		List<SimpleUser> notifiers = getNotifyUsers((ProjectRelayEmailNotification) notification);
-		if ((notifiers != null) && !notifiers.isEmpty()) {
+		if (CollectionUtils.isNotEmpty(notifiers)) {
 			onInitAction(notification);
 			for (SimpleUser user : notifiers) {
 				MailContext<B> context = new MailContext<B>(notification, user,
@@ -178,8 +183,12 @@ public abstract class SendMailToAllMembersAction<B> implements
 									null,
 									contentGenerator
 											.generateSubjectContent(getUpdateSubject(context)),
-									contentGenerator.generateBodyContent(context
-											.templatePath("templates/email/project/itemUpdatedNotifier.mt")),
+									contentGenerator
+											.generateBodyContent(
+													"templates/email/project/itemUpdatedNotifier.mt",
+													context.getLocale(),
+													SiteConfiguration
+															.getDefaultLocale()),
 									null);
 				}
 			}
@@ -191,7 +200,7 @@ public abstract class SendMailToAllMembersAction<B> implements
 	public void sendNotificationForCommentAction(
 			SimpleRelayEmailNotification notification) {
 		List<SimpleUser> notifiers = getNotifyUsers((ProjectRelayEmailNotification) notification);
-		if ((notifiers != null) && !notifiers.isEmpty()) {
+		if (CollectionUtils.isNotEmpty(notifiers)) {
 			onInitAction(notification);
 
 			for (SimpleUser user : notifiers) {
@@ -219,8 +228,12 @@ public abstract class SendMailToAllMembersAction<B> implements
 									null,
 									contentGenerator
 											.generateSubjectContent(getCommentSubject(context)),
-									contentGenerator.generateBodyContent(context
-											.templatePath("templates/email/project/itemCommentNotifier.mt")),
+									contentGenerator
+											.generateBodyContent(
+													"templates/email/project/itemCommentNotifier.mt",
+													context.getLocale(),
+													SiteConfiguration
+															.getDefaultLocale()),
 									null);
 				}
 			}
