@@ -60,6 +60,7 @@ Version 4.5.4
 * [Mobile] User can preview attachment easily
 * [Mobile] Support display hyperlinks for assignee, task, task group, milestone etc
 * [Mobile] Revise time logging component
+* [Mobile] Revise the mobile toolbar display
 
 **Bug Fixes**
 
@@ -68,6 +69,7 @@ Version 4.5.4
 * [Mobile] Back button does not work properly
 * [Mobile] View title is not aligned center in iOS
 * [Mobile] Can only upload one file in iOS
+* Can not send email if user switch to the locale not in the supported list
 
 Version 4.5.3
 -----------------------------
